--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -25,5 +25,5 @@ jobs:
       - name: Run tests and build with Maven
         run: mvn -B clean verify sonar:sonar --file pom.xml
         env:
-          GITHUB_OAUTH: secrets.GITHUB_TOKEN
+          GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
