--- a/pom.xml
+++ b/pom.xml
@@ -436,6 +436,15 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <mainClass>com.exasol.errorcodecatalog.ErrorCatalog</mainClass>
+                    <commandlineArgs>--report-repo target/reports -o target/catalog</commandlineArgs>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
