--- a/.github/workflows/deploy-to-github-pages.yml
+++ b/.github/workflows/deploy-to-github-pages.yml
@@ -1,7 +1,11 @@
 name: Deploy to GitHub pages
 
 on:
-  - push
+  push:
+    branches:
+      - main
+  schedule:
+    - cron: "0 4 * * *"
 
 jobs:
   build:
