--- a/.github/workflows/broken_links_checker.yml
+++ b/.github/workflows/broken_links_checker.yml
@@ -4,14 +4,21 @@ on:
   schedule:
     - cron: "0 5 * * *"
   push:
+    branches:
+      - main
+  pull_request:
 
 jobs:
   linkChecker:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: lychee Link Checker
-        id: lc
-        uses: lycheeverse/lychee-action@v1.0.6
-      - name: Fail if there were link errors
-        run: exit ${{ steps.lc.outputs.exit_code }}
+      - name: Configure broken links checker
+        run: |
+          mkdir -p ./target
+          echo '{ "aliveStatusCodes": [429, 200] }' > ./target/broken_links_checker.json
+      - uses: gaurav-nelson/github-action-markdown-link-check@v1
+        with:
+          use-quiet-mode: 'yes'
+          use-verbose-mode: 'yes'
+          config-file: ./target/broken_links_checker.json
