--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.exasol</groupId>
     <artifactId>error-catalog</artifactId>
-    <version>0.1.0</version>
+    <version>0.2.0</version>
     <name>Exasol Error Catalog</name>
     <description>Tooling for crawling all error codes and generating a online error catalog.</description>
     <url>https://github.com/exasol/error-catalog</url>
@@ -12,13 +12,13 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>11</java.version>
-        <junit.version>5.7.0</junit.version>
+        <junit.version>5.8.2</junit.version>
         <gpg.skip>true</gpg.skip>
         <org.testcontainers.version>1.15.1</org.testcontainers.version>
         <!--
-        M4 does not fail tests if beforeAll fails
-        M5 fails in integration tests with a strange error
-        -->
+            M4 does not fail tests if beforeAll fails
+            M5 fails in integration tests with a strange error
+            -->
         <surefire.and.failsafe.plugin.version>3.0.0-M3</surefire.and.failsafe.plugin.version>
     </properties>
     <licenses>
@@ -51,7 +51,7 @@
             <dependency>
                 <groupId>software.amazon.awssdk</groupId>
                 <artifactId>bom</artifactId>
-                <version>2.15.51</version>
+                <version>2.17.100</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -81,12 +81,12 @@
         <dependency>
             <groupId>com.exasol</groupId>
             <artifactId>error-reporting-java</artifactId>
-            <version>0.4.0</version>
+            <version>0.4.1</version>
         </dependency>
         <dependency>
             <groupId>com.exasol</groupId>
             <artifactId>error-code-model-java</artifactId>
-            <version>0.1.0</version>
+            <version>1.1.0</version>
         </dependency>
         <dependency>
             <groupId>com.j2html</groupId>
@@ -96,12 +96,12 @@
         <dependency>
             <groupId>org.kohsuke</groupId>
             <artifactId>github-api</artifactId>
-            <version>1.130</version>
+            <version>1.301</version>
         </dependency>
         <dependency>
             <groupId>info.picocli</groupId>
             <artifactId>picocli</artifactId>
-            <version>4.6.1</version>
+            <version>4.6.2</version>
         </dependency>
         <!-- test dependencies -->
         <dependency>
@@ -125,7 +125,7 @@
         <dependency>
             <groupId>nl.jqno.equalsverifier</groupId>
             <artifactId>equalsverifier</artifactId>
-            <version>3.5.4</version>
+            <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -137,7 +137,7 @@
                 <version>${surefire.and.failsafe.plugin.version}</version>
                 <configuration>
                     <!-- Set the highest log level for coverage testing, so that we
-                      have a chance to reach branches in the logging lambdas too. -->
+                                have a chance to reach branches in the logging lambdas too. -->
                     <argLine>-Djava.util.logging.config.file=src/test/resources/logging.properties ${argLine}</argLine>
                     <excludes>
                         <exclude>**IT.java</exclude>
@@ -150,7 +150,7 @@
                 <version>${surefire.and.failsafe.plugin.version}</version>
                 <configuration>
                     <!-- Set the highest log level for coverage testing, so that we have a chance to reach branches
-                      <property>	                      in the logging lambdas too. -->
+                                <property>	                      in the logging lambdas too. -->
                     <argLine>-Djava.util.logging.config.file=src/test/resources/logging.properties ${argLine}</argLine>
                     <includes>
                         <include>**IT.java</include>
@@ -206,7 +206,7 @@
                 <configuration>
                     <excludeVulnerabilityIds>
                         <!-- Ignores CVE-2020-15250, because we use Java 11 and junit 4.13.1 which contains a fix:
-                        https://ossindex.sonatype.org/vuln/7ea56ad4-8a8b-4e51-8ed9-5aad83d8efb1 -->
+                                    https://ossindex.sonatype.org/vuln/7ea56ad4-8a8b-4e51-8ed9-5aad83d8efb1 -->
                         <exclude>7ea56ad4-8a8b-4e51-8ed9-5aad83d8efb1</exclude>
                     </excludeVulnerabilityIds>
                 </configuration>
@@ -224,7 +224,7 @@
                         <configuration>
                             <rules>
                                 <requireMavenVersion>
-                                    <version>3.3.9</version>
+                                    <version>3.6.3</version>
                                 </requireMavenVersion>
                             </rules>
                         </configuration>
@@ -234,7 +234,7 @@
             <plugin>
                 <groupId>com.exasol</groupId>
                 <artifactId>project-keeper-maven-plugin</artifactId>
-                <version>0.7.1</version>
+                <version>1.3.4</version>
                 <executions>
                     <execution>
                         <goals>
@@ -380,7 +380,7 @@
             <plugin>
                 <groupId>com.exasol</groupId>
                 <artifactId>error-code-crawler-maven-plugin</artifactId>
-                <version>0.1.1</version>
+                <version>0.7.1</version>
                 <executions>
                     <execution>
                         <goals>
@@ -444,6 +444,17 @@
                     <mainClass>com.exasol.errorcodecatalog.ErrorCatalog</mainClass>
                     <commandlineArgs>--report-repo target/reports -o target/catalog</commandlineArgs>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
+                <executions>
+                    <execution>
+                        <id>default-jar</id>
+                        <phase>none</phase>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
