Excluded  ci-build.yml from auto-update

--- a/.project-keeper.yml
+++ b/.project-keeper.yml
@@ -7,3 +7,5 @@ sources:
 
 linkReplacements:
   - "https://awhitford.github.com/lombok.maven/lombok-maven-plugin/|http://anthonywhitford.com/lombok.maven/lombok-maven-plugin/"
+excludes:
+  - "E-PK-CORE-18: Outdated content: '.github/workflows/ci-build.yml'"
