Fix inconsistently generated dependencies file

--- a/.project-keeper.yml
+++ b/.project-keeper.yml
@@ -7,3 +7,4 @@ sources:
 excludes:
   - "E-PK-CORE-18: Outdated content: '.github/workflows/ci-build.yml'"
   - "E-PK-CORE-18: Outdated content: '.github/workflows/release_droid_prepare_original_checksum.yml'"
+  - regex: "E-PK-CORE-53: The dependencies.md file has outdated content.*"
