--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.exasol</groupId>
     <artifactId>error-catalog</artifactId>
@@ -117,8 +119,18 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.0.0</version>
                 <configuration>
-                    <mainClass>com.exasol.errorcodecatalog.ErrorCatalog</mainClass>
-                    <commandlineArgs>--report-repo target/reports -o target/catalog</commandlineArgs>
+                    <executable>java</executable>
+                    <arguments>
+                        <argument>-classpath</argument>
+                        <classpath />
+                        <argument>
+                            -Djava.util.logging.config.file=src/test/resources/logging.properties</argument>
+                        <argument>com.exasol.errorcodecatalog.ErrorCatalog</argument>
+                        <argument>--report-repo</argument>
+                        <argument>target/reports</argument>
+                        <argument>--output-directory</argument>
+                        <argument>target/catalog</argument>
+                    </arguments>
                 </configuration>
             </plugin>
         </plugins>
