--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -67,6 +67,9 @@ jobs:
           mvn --batch-mode clean verify \
               -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn \
               -DtrimStackTrace=false
+        env: {
+          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
+        }
       - name: Sonar analysis
         id: sonar-analysis
         if: ${{ env.SONAR_TOKEN != null }}
