--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -104,11 +104,12 @@ jobs:
         env: {
           GITHUB_TOKEN: '${{ github.token }}'
         }
-      - {
-        name: Build project,
-        id: build,
+      - name: Build project
+        id: build
         run: mvn --batch-mode -DskipTests clean verify
-      }
+        env: {
+          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
+        }
       - {
         name: List secret GPG keys,
         id: list-secret-gpg-keys,
